updated description for day 3, did some refactoring